formating - google java format + performance improvments and minor bugs fix